# neural-net-project

./: .gitignore  README.md  audio_utils.py  dataset.py  evaluate.py  file_inference.py  inspect_wrong.py  models.py  plot_training_logs.py  pyproject.toml  train.py
Report/: report_with_frontespizio.aux  report_with_frontespizio.fdb_latexmk  report_with_frontespizio.fls  report_with_frontespizio.tex  report_with_frontespizio.toc
checkpoints/: best_light.pth
eval_out/: wrong_alexnet.csv  wrong_light.csv  wrong_mobilenet.csv  wrong_resnet.csv
eval_outputs_smoke/: custom_critical_cases.csv
training_logs/: training_history_alexnet.csv  training_history_light.csv  training_history_mobilenet.csv  training_history_resnet.csv
