[project]
name = "progav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch==2.8.0+cpu",
    "torchvision==0.23.0+cpu",
    "torchaudio==2.8.0+cpu",
    "soundfile>=0.13.1",
    "matplotlib>=3.9.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
